--- a/package.json
+++ b/package.json
@@ -29,5 +29,7 @@
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
-  }
+  },
+  "repository": "git@github.com:Jaakkko/simple-form-validator.git",
+  "author": "Jaakkko <jaakkole2@gmail.com>"
 }
