--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@jaakkko/simple-form-validator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "license": "MIT",
+  "private": false,
   "scripts": {
     "test": "jest --forceExit --coverage --verbose --detectOpenHandles"
   },
