--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@jaakkko/simple-form-validator",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "main": "dist/index.js",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "test": "jest --forceExit --coverage --verbose --detectOpenHandles"
+    "test": "jest --forceExit --coverage --verbose --detectOpenHandles",
+    "build": "tsc"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "i18n": "^0.13.2",
-    "locale": "^0.1.0"
+    "i18n": "^0.13.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.10",
