--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,32 +2,21 @@
   "root": true,
   "env": {
     "es2021": true,
-    "node": true,
-    "jest": true
+    "node": true
   },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:jest/recommended"
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module",
-    "project": ["tsconfig.json", "jest.tsconfig.json"]
+    "project": ["tsconfig.json"]
   },
-  "plugins": ["@typescript-eslint", "jest"],
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "require-await": "error",
-    "@typescript-eslint/no-floating-promises": ["error"],
-    "jest/no-disabled-tests": "warn",
-    "jest/no-focused-tests": "error",
-    "jest/no-identical-title": "error",
-    "jest/prefer-to-have-length": "warn",
-    "jest/valid-expect": "error",
-    "jest/expect-expect": [
-      "warn",
-      { "assertFunctionNames": ["expect", "request"] }
-    ]
+    "@typescript-eslint/no-floating-promises": ["error"]
   }
 }
