--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaakkko/simple-form-validator",
-  "version": "1.2.3",
+  "version": "2.0.0",
   "main": "dist/index.js",
   "license": "MIT",
   "private": false,
@@ -8,17 +8,14 @@
     "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "i18n": "^0.13.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.10",
     "@types/i18n": "^0.12.0",
     "@types/node": "^14.14.20",
-    "@types/source-map-support": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "concurrently": "^5.3.0",
     "eslint": "^7.17.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
